--- a/mainpage.html
+++ b/mainpage.html
@@ -64,9 +64,12 @@ function askQuestion(question, correctAnswer, fileName) {
     if (userAnswer !== null && userAnswer.trim().toLowerCase() === correctAnswer.toLowerCase()) {
         alert("✅ хорошая девочка");
         document.getElementById("playerContainer").innerHTML = 
-            `<div style="margin-top:10px;">
-                <embed src="./media/${fileName}" width="640" height="480" />
-             </div>`;
+             `<div style="margin-top:10px;">
+        <video width="640" height="480" controls>
+          <source src="./media/${fileName}" type="video/mp4" />
+            Ваш браузер не поддерживает видео.
+        </video>
+     </div>`;
     } else {
         alert("❌ немного не такой ответ я ожидала");
     }
@@ -75,4 +78,5 @@ function askQuestion(question, correctAnswer, fileName) {
 
 </body>
 </html>
+
 
