--- a/mainpage.html
+++ b/mainpage.html
@@ -20,8 +20,8 @@
 
     .glow-btn {
         font-size: 20px;
-        padding: 5px 10px;
-        margin: 10px;
+        padding: 20px;
+        margin: 20px;
         background-color: #a88faeff;
         color: #3cfcffff;
         border: none;
@@ -75,6 +75,7 @@ function askQuestion(question, correctAnswer, fileName) {
 
 </body>
 </html>
+
 
 
 
