--- a/mainpage.html
+++ b/mainpage.html
@@ -20,8 +20,8 @@
 
     .glow-btn {
         font-size: 20px;
-        padding: 20px;
-        margin: 20px;
+        padding: 5px 10px;
+        margin: 10px;
         background-color: #a88faeff;
         color: #3cfcffff;
         border: none;
@@ -65,7 +65,7 @@ function askQuestion(question, correctAnswer, fileName) {
         alert("✅ хорошая девочка");
         document.getElementById("playerContainer").innerHTML = 
                `<div style="margin-top:10px;">
-                <embed src="./media/${fileName}" width="640" height="640" />
+                <embed src="./media/${fileName}" width="550" height="640" />
              </div>`;
     } else {
         alert("❌ немного не такой ответ я ожидала");
@@ -75,6 +75,7 @@ function askQuestion(question, correctAnswer, fileName) {
 
 </body>
 </html>
+
 
 
 
